# ComfyUI-PersonaLive

./: .gitignore  README.md  nodes.py  pyproject.toml
configs/prompts/: personalive_photo.yaml
examples/: simple_example.json
src/pipelines/: pipeline_pose2vid.py
