[project]
name = "ComfyUI-PersonaLive"
description = "This is a ComfyUI custom node implementation of PersonaLive: Expressive Portrait Image Animation for Live Streaming."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch", "torchvision", "accelerate", "av", "decord", "diffusers", "einops", "fastapi", "huggingface-hub", "markdown2", "mediapipe", "numpy", "omegaconf", "onnx", "onnx_graphsurgeon", "onnx_simplifier", "opencv-contrib-python", "opencv-python-headless", "Pillow", "polygraphy", "pycuda", "pydantic", "safetensors", "scikit-image", "starlette", "tensorrt", "tqdm", "transformers", "uvicorn", "xformers", "peft", "python-multipart", "onnxruntime", "colored"]

[project.urls]
Repository = "https://github.com/okdalto/ComfyUI-PersonaLive"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/okdalto/ComfyUI-PersonaLive/wiki"
"Bug Tracker" = "https://github.com/okdalto/ComfyUI-PersonaLive/issues"

[tool.comfy]
PublisherId = "seonghyeon"
DisplayName = "ComfyUI-PersonaLive"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

